--- a/live.html
+++ b/live.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="" />
     </head>
     <body>
-      <div id="video-area" width="100%" height="22rem"></div>
+      <div id="video-area" width="100%" height="480px"></div>
       <script type="text/javascript" src="http://7xjfim.com2.z0.glb.qiniucdn.com/Iva.js"></script>
       <script type="text/javascript">
         var ivaInstance = new Iva(
